# printguard

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 01_printguard_training.ipynb
src/core/: config.py  defect_accumulator.py  interfaces.py
tests/unit/: test_defect_accumulator.py  test_interfaces.py
